<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000"
    android:scrollbarThumbVertical="@color/ColorActivities">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">


        <TextView
            android:id="@+id/movies_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/details_movies_title"
            android:textColor="#F1F1F1"
            android:textColorHint="#FFC107"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movies_details_title">


            <ImageView
                android:id="@+id/movies_details_image"
                android:layout_width="525dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:background="#FFC107"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/movies_details_btPlay"
                android:layout_width="138dp"
                android:layout_height="114dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_play_circle_outline_24" />

            <FrameLayout
                android:id="@+id/movie_details_plaseHolder"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000000">

                <TextView
                    android:id="@+id/movies_details_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_movies_overview"
                    android:textColor="#F4F4F4"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movies_details_tvDataReleas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/details_movies_release"
                    android:textColor="#F3F3F3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movies_details_overview" />

                <TextView
                    android:id="@+id/movies_details_releas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="13.06.1997"
                    android:textColor="#FBFBFB"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/movies_details_tvDataReleas"
                    app:layout_constraintStart_toEndOf="@+id/movies_details_tvDataReleas"
                    app:layout_constraintTop_toTopOf="@+id/movies_details_tvDataReleas" />

                <TextView
                    android:id="@+id/movies_details_tvScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/details_movies_score"
                    android:textColor="#FFFFFF"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movies_details_tvDataReleas" />

                <TextView
                    android:id="@+id/movies_details_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="8.7"
                    android:textColor="#F1EDED"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/movies_details_tvScore"
                    app:layout_constraintStart_toEndOf="@+id/movies_details_tvScore"
                    app:layout_constraintTop_toTopOf="@+id/movies_details_tvScore" />

                <TextView
                    android:id="@+id/movies_details_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/details_movies_someText"
                    android:textColor="#F6F6F6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movies_details_tvScore" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>